@@ -73,7 +73,6 @@
   <block id="e67f7cfa37e5dcd4f3836e76f5301a68" category="inline-image-macro">Captura de pantalla de la página para cambiar la capacidad de almacenamiento y los valores de IOPS.</block>
   <block id="f5aa006a4894acbba121bdb32f513ead" category="paragraph"><block ref="f5aa006a4894acbba121bdb32f513ead" category="inline-image-macro-rx" type="image"></block></block>
   <block id="1c17ed8503d69fa2ad1c61b6c92a2255" category="list-text">El aprovechamiento máximo de la capacidad de almacenamiento recomendado es del 80 % para mantener el rendimiento de la segmentación de datos y permitir la capacidad para datos adicionales.</block>
-  <block id="e8036e0ac9189e05af8ebeb943ee3fd3" category="list-text">Si selecciona *Automatic* IOPS, mantiene una relación de tres IOPS de SSD aprovisionadas por GIB de almacenamiento primario hasta 80,000. No puede aprovisionar manualmente un valor de IOPS de 80,000 o superior.</block>
   <block id="d179171b709f127d6b88e332ad5ac396" category="list-text">Marque la casilla de comprobación para confirmar que comprende cómo el cambio de la capacidad de almacenamiento afecta el coste del FSX para el servicio ONTAP y que no es posible realizar cambios adicionales durante seis horas.</block>
   <block id="1f25673463b8f906d801bd291ad45315" category="list-text">Seleccione *Actualizar* para confirmar los cambios.</block>
   <block id="b3fee7abcfd59e1f7a4b591d94eea26b" category="section-title">Elimine FSX para ONTAP del espacio de trabajo</block>
@@ -692,7 +691,6 @@
   <block id="ad0ae9ea1f2e8d973a9a0f6bb169f494" category="inline-image-macro">Icono con tres puntos que aparece en la última columna de la tabla</block>
   <block id="98efef1c8a47ed5791b41944e8ff4ec2" category="list-text">Gestione un caso existente haciendo clic en <block ref="a0b152b50a56901a75affebabc26ed61" category="inline-image-macro-rx" type="image"></block> y seleccione una de las opciones disponibles:</block>
   <block id="6d9dd74e7709ef802d299966f7898f6b" category="list-text">*Ver caso*: Ver todos los detalles sobre un caso específico.</block>
-  <block id="482429810c2b00a4fa04f9900c560232" category="list-text">*Actualizar notas de caso*: Proporcione detalles adicionales sobre su problema.</block>
   <block id="f791bc685c526af8296381acff10f6a0" category="list-text">*Cerrar caso*: Proporcione detalles sobre por qué cierra el caso y haga clic en *Cerrar caso*.</block>
   <block id="e93217b2f709a398ce3c0fb753beb05f" category="inline-image-macro">Captura de pantalla que muestra las acciones que puede realizar después de seleccionar el menú de la última columna de la tabla.</block>
   <block id="e9a5c374fb47ed2ae5cc6108fb36d829" category="paragraph"><block ref="e9a5c374fb47ed2ae5cc6108fb36d829" category="inline-image-macro-rx" type="image"></block></block>
@@ -737,4 +735,17 @@
   <block id="39eff6a0e62a9e3eafb92d6d0dc18004" category="doc">Cree volúmenes para Amazon FSX para ONTAP de NetApp</block>
   <block id="7aa1575aeeddba65d55707b41584cd4a" category="sidebar">Utilice Amazon FSX para ONTAP de NetApp</block>
   <block id="c82c15e6d66564201da1f424b2fb9bf4" category="sidebar">Documentos de Amazon FSX para ONTAP de NetApp</block>
+  <block id="a3ef479db7087d8c91c8e7225a427426" category="list-text">Si selecciona *Automatic* IOPS, mantiene una relación de tres IOPS de SSD aprovisionadas por GIB de almacenamiento primario hasta 160,000. No puede aprovisionar manualmente un valor de IOPS superior a 160,000.</block>
+  <block id="ee7de532c8affb3659d9d80ec396fef5" category="list-text">De manera opcional, seleccione la opción optimización para crear una FlexGroup y distribuir datos de volúmenes en el clúster.</block>
+  <block id="d22ff9012fce506ed1f2c7ba6e00a0e6" category="admonition">La distribución FlexGroup solo está disponible para protocolos de volúmenes NFS y CIFS.</block>
+  <block id="953d80d6f5efbc162c05017004c6791a" category="list-text">Si seleccionó Optimization (FlexGroup), debe especificar el número de componentes a los que se deben distribuir los datos de volúmenes en. Se recomienda encarecidamente utilizar un número par de componentes para garantizar una distribución uniforme de los datos. La mejor práctica son 8 componentes.</block>
+  <block id="2447632b449c054d670473aa08500256" category="inline-image-macro">Captura de pantalla del campo para especificar el número de componentes a los que se deben distribuir los datos del volumen.</block>
+  <block id="e8a33687845a8222ff0797ef7fa10d6a" category="paragraph"><block ref="e8a33687845a8222ff0797ef7fa10d6a" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="88c49608e723add593f5becc8bd9a968" category="section-title">02 de abril de 2023</block>
+  <block id="cabf1912632a0d24145c02f00dc7d6b2" category="inline-link-macro">Cree un FlexGroup en FSX para ONTAP</block>
+  <block id="9a2a26c33c1a0f6b14b7bb3a214dbaf0" category="list-text">Ahora puede hacerlo <block ref="5e895283a25d01b135da63bdfcfdf72e" category="inline-link-macro-rx"></block> volúmenes para distribuir datos de volúmenes en el clúster.</block>
+  <block id="9af9b754c1d16f271c1e6f4b1b2c4f4d" category="list-text">El límite de IOPS se aumenta para permitir el aprovisionamiento manual o automático hasta 160,000.</block>
+  <block id="c7f5c1a75acc58c6f004efc0ce1eba09" category="list-text">*Accesorio (opcional)*: Cargue hasta cinco archivos adjuntos, uno a la vez.</block>
+  <block id="bfa80e7aaad6da353b431bff3a0e12d6" category="paragraph">Los archivos adjuntos están limitados a 25 MB por archivo. Se admiten las siguientes extensiones de archivo: Txt, log, pdf, jpg/jpeg, rtf, doc/docx, xls/xlsx y csv.</block>
+  <block id="8e6b52a532a4fbbfc98dca3ebfa5f1e6" category="list-text">*Actualizar notas de caso*: Proporcione detalles adicionales sobre su problema o seleccione *cargar archivos* para adjuntar hasta un máximo de cinco archivos.</block>
 </blocks>
