@@ -110,7 +110,7 @@ image:screenshot-configure-iops.png["Captura de pantalla de la página para camb
 [NOTE]
 ====
 ** El aprovechamiento máximo de la capacidad de almacenamiento recomendado es del 80 % para mantener el rendimiento de la segmentación de datos y permitir la capacidad para datos adicionales.
-** Si selecciona *Automatic* IOPS, mantiene una relación de tres IOPS de SSD aprovisionadas por GIB de almacenamiento primario hasta 80,000. No puede aprovisionar manualmente un valor de IOPS de 80,000 o superior.
+** Si selecciona *Automatic* IOPS, mantiene una relación de tres IOPS de SSD aprovisionadas por GIB de almacenamiento primario hasta 160,000. No puede aprovisionar manualmente un valor de IOPS superior a 160,000.
 
 
 ====
